# persfin

./: .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  docker-compose.yml  privacy.md  pyproject.toml  terms.md
firefly/: .env.example  .importer.env.example  docker-compose.yml
firefly/certs/: README.md
src/persfin/: __init__.py  cli.py  config.py  enablebanking.py  main.py  models.py
src/persfin/api/: __init__.py  accounts.py  auth.py  banks.py
src/persfin/core/: __init__.py  config.py  session_store.py
src/persfin/schemas/: __init__.py  schemas.py
src/persfin/services/: __init__.py  enablebanking.py
tests/: conftest.py  test_cli.py  test_main.py  test_models.py
